# spatialroot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  build.ps1  build.sh  engine.sh  examples.sh  init.ps1  init.sh  run.ps1  run.sh  runPipeline.py  runRealtime.py
.claude/projects/-Users-lucian-Projects-spatialroot/memory/: MEMORY.md  project_gui_decision.md  project_refactor_state.md
.github/workflows/: ci.yml  windows-package.yml
PUBLIC_DOCS/: API.md
build-all/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-all/allolib-build/: Makefile  cmake_install.cmake
build-all/libsndfile-build/: Makefile  SndFileTargets.cmake  cmake_install.cmake
build-all/source/spatial_engine/realtimeEngine/: Makefile  cmake_install.cmake  spatialroot_realtime
build-all/source/spatial_engine/spatialRender/: Makefile  cmake_install.cmake
build-offline/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-offline/allolib-build/: Makefile  cmake_install.cmake
build-offline/libsndfile-build/: Makefile  SndFileTargets.cmake  cmake_install.cmake
build-offline/libsndfile-build/src/: config.h
build-offline/source/spatial_engine/spatialRender/: Makefile  spatialroot_spatial_render
cmake/: VerifyWindowsPackage.cmake
data/tmpProccessedData/: scene.lusid.json
gui/: main.py  styles.qss  transcode_runner.py
gui/imgui/: CMakeLists.txt
gui/imgui/src/: App.cpp  App.hpp  FileDialog.cpp  FileDialog.hpp  FileDialog_macOS.mm  main.cpp
gui/realtimeGUI/: realtimeGUI.py  realtime_runner.py  realtime_transcoder_runner.py
gui/realtimeGUI/realtime_panels/: RealtimeInputPanel.py  RealtimeTranscodePanel.py  theme.py
gui/widgets/: input_panel.py  transcode_panel.py
internalDocs/: 5_11_audits.md  AGENTS.md  API.md  API_internal.md  BUILD_AND_CI.md  CULT_ALLOLIB_AUDIT.md  DEPENDENCIES.md  PACKAGING.md  REALTIME_ENGINE.md  REMAP.md  REPO_AUDITING.md  SPATIALIZATION.md  autoCompPlan.md  codeSigning.md  devHistory.md  layoutConfigTesting.md  offlineRemap.md  offlineRenderStatus.md  references.md  spatialRender_split_report_2026-05-08.md  windowsDebug.md  windowsPackaging.md
internalDocs/API/: new_context.md
internalDocs/DBAP/: cult_dbap.md  dbapMath.md
internalDocs/engine_testing/: 4_1_bug_audit.md  5-7-engine_fix.md  realtime_testing.md
internalDocsMD/: AGENTS.md  API.md  API_internal.md  BUILD_AND_CI.md  REALTIME_ENGINE.md  REPO_AUDITING.md  SPATIALIZATION.md  TODO.md  alloRootOnboarding.md  alloRootPlan.md  autoCompPlan.md  codeSigning.md  dbapMath.md  devHistory.md  remap_plan.md
internalDocsMD/API/: api_agent_log.md  api_derived_design.md  api_implementation_handoff.md  api_internal_contract.md  api_mismatch_ledger.md  new_context.md
internalDocsMD/OS/: 3_11_dep_audit.md  CI_overview.md  build-wiring.md
internalDocsMD/Offline_Rendering/: 3_9_offline_plan.md  offline_pipeline.md
internalDocsMD/Realtime_Engine/: 3-8-bug-diagnoses.md  3_9_bug_audit.md  4_1_bug_audit.md  realtime_bug_audit.md  realtime_testing.md
internalDocsMD/Realtime_Engine/Updates/: lusidpackaging.md
internalDocsMD/Realtime_Engine/agentDocsv1/: STYLING_AGENT_INSTRUCTIONS.py  agent_adm_direct_streaming.md  agent_backend_adapter.md  agent_compensation_and_gain.md  agent_gui_UPDATED_v3.md  agent_lfe_router.md  agent_output_remap.md  agent_pose_and_control.md  agent_spatializer_dbap.md  agent_streaming.md  agent_threading_and_safety.md  allolib_parameters_reference.md  realtimeEngine_designDoc.md  realtime_master.md
internalDocsMD/cpp_refactor/: initial_audit.md  phase3notes.md  refactor_log.md  refactor_planning.md  secondary_audit.md  third_audit.md  usefulPyInfo.md
scripts/: shallow-submodules.sh  sparse-allolib.sh
source/gui/imgui/: CMakeLists.txt
source/gui/imgui/cmake/: EmbedBinaryAsHeader.cmake
source/gui/imgui/src/: App.cpp  App.hpp  FileDialog.cpp  FileDialog.hpp  FileDialog_macOS.mm  OfflineRenderJob.cpp  OfflineRenderJob.hpp  SpatialRootPaths.cpp  SpatialRootPaths.hpp  StartupLogger.cpp  StartupLogger.hpp  SubprocessRunner.cpp  SubprocessRunner.hpp  main.cpp
source/scripts/: macPack.sh  shallow-submodules.sh
source/spatial_engine/: .gitignore
source/spatial_engine/realtimeEngine/: CMakeLists.txt
source/spatial_engine/realtimeEngine/src/: AutoComp.hpp  EngineSession.cpp  EngineSession.hpp  MultichannelReader.hpp  OutputRemap.hpp  Pose.hpp  RealtimeBackend.hpp  Streaming.hpp  (+3 more)
source/spatial_engine/remaping/: allo_remap.csv
source/spatial_engine/spatialRender/: CMakeLists.txt  OfflineOutputRouteMap.cpp  OfflineOutputRouteMap.hpp  OfflineRender.cpp  OfflineRender.hpp  OfflineRenderCliCommand.cpp  OfflineRenderCliCommand.hpp  SpatialRenderer.cpp  SpatialRenderer.hpp  main.cpp  offline_render_plan_test.cpp
source/spatial_engine/speaker_layouts/: layout_template.json  translab-sono-layout.json
source/spatial_engine/src/: JSONLoader.cpp  JSONLoader.hpp  LayoutLoader.cpp  LayoutLoader.hpp  OfflineRenderRemapPlan.cpp  OfflineRenderRemapPlan.hpp  SndFileHelpers.hpp  WavUtils.cpp  main.cpp
spatial_engine/realtimeEngine/: CMakeLists.txt
spatial_engine/realtimeEngine/src/: EngineSession.cpp  EngineSession.hpp  Pose.hpp  RealtimeBackend.hpp  RealtimeTypes.hpp  Spatializer.hpp  Streaming.hpp  embedding_test.cpp  internal_validation_runner.cpp  main.cpp
spatial_engine/spatialRender/: CMakeLists.txt
spatial_engine/speaker_layouts/: allosphere_layout.json  krakow_layout.json  stereo.json
spatial_engine/speaker_layouts/example_layouts/: 5_1.json  circle_12.json  cube_8.json  dual_ring_16.json  quad_4.json  ring8_top4.json  stereo.json
spatial_engine/src/: WavUtils.cpp  WavUtils.hpp  main.cpp  test_main.cpp
spatial_engine/src/renderer/: SpatialRenderer.cpp  SpatialRenderer.hpp
spatial_engine/src/vbap_src/: VBAPRenderer.cpp  VBAPRenderer.hpp
src/: createFromLUSID.py  createRender.py
src/config/: configCPP_posix.py  configCPP_windows.py
src/packageADM/: packageForRender.py
utils/: deleteData.py  examples.ps1  examples.sh  generate_swirl_scene.py  getExamples.py
(+5 files in other folders)
